@startuml

set namespaceSeparator none
hide circle
hide methods

skinparam linetype ortho
skinparam defaultFontName Roboto Mono
skinparam shadowing false


entity Core.Schemas.Category {
  id : binary_id
  --
  title : string
  description : string
  user_id : binary_id
  inserted_at : utc_datetime_usec
  updated_at : utc_datetime_usec
}

entity Core.Schemas.Transaction {
  id : binary_id
  --
  title : string
  movement : enum(outgoing,incoming)
  value_in_cents : integer
  date : date
  due_date : date
  is_fixed : boolean
  is_paid : boolean
  user_id : binary_id
  category_id : binary_id
  inserted_at : utc_datetime_usec
  updated_at : utc_datetime_usec
}

entity Core.Schemas.User {
  id : binary_id
  --
  full_name : string
  email : string
  password_hash : string
  base_income : integer
  inserted_at : utc_datetime_usec
  updated_at : utc_datetime_usec
}

Core.Schemas.Category ||--|{ Core.Schemas.Transaction
Core.Schemas.User ||--|{ Core.Schemas.Category
Core.Schemas.User ||--|{ Core.Schemas.Transaction
@enduml
